feat: add three-tier server health checks